--- a/AngularSeedAspNet5/src/AngularSeedAspNet5/bower.json
+++ b/AngularSeedAspNet5/src/AngularSeedAspNet5/bower.json
@@ -5,6 +5,9 @@
     "bootstrap": "3.3.5",
     "jquery": "2.1.4",
     "jquery-validation": "1.14.0",
-    "jquery-validation-unobtrusive": "3.2.4"
+    "jquery-validation-unobtrusive": "3.2.4",
+    "jasmine": "2.4.1",
+    "angular": "1.4.9",
+    "angular-mocks": "1.4.9"
   }
 }
