--- a/AngularSeedAspNet5/src/AngularSeedAspNet5/package.json
+++ b/AngularSeedAspNet5/src/AngularSeedAspNet5/package.json
@@ -6,6 +6,10 @@
     "gulp-concat": "2.5.2",
     "gulp-cssmin": "0.1.7",
     "gulp-uglify": "1.2.0",
+    "jasmine-core": "2.4.1",
+    "karma": "0.13.19",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-jasmine": "0.3.6",
     "rimraf": "2.2.8"
   }
 }
