--- a/AngularSeedAspNetCore/src/AngularSeedAspNetCore/bower.json
+++ b/AngularSeedAspNetCore/src/AngularSeedAspNetCore/bower.json
@@ -8,6 +8,7 @@
     "jquery-validation-unobtrusive": "3.2.4",
     "jasmine": "2.4.1",
     "angular": "1.4.9",
-    "angular-mocks": "1.4.9"
+    "angular-mocks": "1.4.9",
+    "angular-resource": "1.4.9"
   }
 }
